// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox 1`] = `
<div
  className="box relative"
>
  <input
    checked={false}
    className="input inputEnabled inputMd"
    disabled={false}
    id="id"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <div
    className="border check whiteBg checkEnabled checkMd"
  />
</div>
`;

exports[`Checkbox checked 1`] = `
<div
  className="box relative"
>
  <input
    checked={true}
    className="input inputEnabled inputMd"
    disabled={false}
    id="id"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <div
    className="borderDark check darkGrayBg checkEnabled checkMd"
  >
    <svg
      aria-hidden={true}
      aria-label=""
      className="icon white iconBlock"
      height={12}
      role="img"
      viewBox="0 0 24 24"
      width={12}
    >
      <title>
        
      </title>
      <path
        d="test-file-stub"
      />
    </svg>
  </div>
</div>
`;

exports[`Checkbox disabled & checked 1`] = `
<div
  className="box relative"
>
  <input
    checked={true}
    className="input inputSm"
    disabled={true}
    id="id"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <div
    className="border check grayBg checkSm"
  >
    <svg
      aria-hidden={true}
      aria-label=""
      className="icon white iconBlock"
      height={8}
      role="img"
      viewBox="0 0 24 24"
      width={8}
    >
      <title>
        
      </title>
      <path
        d="test-file-stub"
      />
    </svg>
  </div>
</div>
`;

exports[`Checkbox disabled 1`] = `
<div
  className="box relative"
>
  <input
    checked={false}
    className="input inputSm"
    disabled={true}
    id="id"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <div
    className="border check lightGrayBg checkSm"
  />
</div>
`;

exports[`Checkbox indeterminate 1`] = `
<div
  className="box relative"
>
  <input
    checked={false}
    className="input inputEnabled indeterminate inputMd"
    disabled={false}
    id="id"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <div
    className="borderDark check darkGrayBg checkEnabled checkMd"
  >
    <svg
      aria-hidden={true}
      aria-label=""
      className="icon white iconBlock"
      height={12}
      role="img"
      viewBox="0 0 24 24"
      width={12}
    >
      <title>
        
      </title>
      <path
        d="test-file-stub"
      />
    </svg>
  </div>
</div>
`;

exports[`Checkbox small 1`] = `
<div
  className="box relative"
>
  <input
    checked={false}
    className="input inputEnabled inputSm"
    disabled={false}
    id="id"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <div
    className="border check whiteBg checkEnabled checkSm"
  />
</div>
`;

exports[`Checkbox with error 1`] = `
<div
  className="box relative"
>
  <input
    checked={false}
    className="input inputEnabled inputSm"
    disabled={false}
    id="id"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <div
    className="borderError check whiteBg checkEnabled checkSm"
  />
</div>
`;
